<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_baseline_info_24"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/DarkMode"
        android:title="@string/darkMode"
        app:showAsAction="never" />
    <item
        android:id="@+id/item3"
        android:title="@string/language"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/englishLanguage"
                android:title="@string/english" />
            <item
                android:id="@+id/frenchLanguage"
                android:title="@string/french" />
        </menu>
    </item>


</menu>
