<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="392dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/NumTableTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableNumber"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputnumtable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="2,4,6"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/NumTableTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/numberofperson"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/intputnumberperson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="1"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/availability"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/swAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancelDialogue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_okDialogue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/btn_okDialogue" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
