<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.booking.ChangeDatasActivity">

    <EditText
        android:id="@+id/nameHint"
        style="@style/helpString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/name"
        style="@style/helpString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberOfPersons"
        style="@style/helpString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/numberOfPersons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameHint" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="62dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:autofillHints="2"
        android:ems="10"
        android:importantForAutofill="auto"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPersons" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="18dp"
        android:onClick="addPerson"
        android:text="@string/plusButton"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPersons" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:onClick="decreasePerson"
        android:text="@string/minusButton"
        app:layout_constraintStart_toEndOf="@+id/plusButton"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPersons" />

    <TextView
        android:id="@+id/selectDate"
        style="@style/helpString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/selectDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="279dp"
        android:layout_height="294dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDate" />

    <TextView
        android:id="@+id/timeSelect"
        style="@style/helpString"
        android:layout_width="143dp"
        android:layout_height="26dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="12dp"
        android:text="@string/timeSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/period"
        android:layout_width="167dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/timeSelect"
        app:layout_constraintTop_toBottomOf="@+id/calendarView"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/midday"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="80dp"
            android:text="@string/midday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/evening"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="80dp"
            android:text="@string/evening" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/timeSlots"
        android:layout_width="331dp"
        android:layout_height="33dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeSelect"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/slot1"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/slot2"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/slot3"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/slot4"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/slot5"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />
    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="validateBooking"
        android:text="@string/validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>