<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.booking.MainBookingActivity">

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="continueBooking"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="293dp"
        android:layout_height="315dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDate" />

    <TextView
        android:id="@+id/numberOfPersons"
        style="@style/helpString"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/numberOfPersons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selectDate"
        style="@style/helpString"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/selectDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/timeSelect"
        style="@style/helpString"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/timeSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="70dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:autofillHints="2"
        android:ems="10"
        android:importantForAutofill="auto"
        android:inputType="number"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPersons" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="57dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="14dp"
        android:onClick="addPerson"
        android:text="@string/plusButton"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPersons" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="57dp"
        android:layout_height="34dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="14dp"
        android:onClick="decreasePerson"
        android:text="@string/minusButton"
        app:layout_constraintStart_toEndOf="@+id/plusButton"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPersons" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/timeSlots"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeSelect"
        app:layout_constraintVertical_bias="1.0"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/midday"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="80dp"
            android:text="@string/midday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/evening"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="80dp"
            android:text="@string/evening" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/timeSlots"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeSelect"
        app:layout_constraintVertical_bias="0.984"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/slot1"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/slot2"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/slot3"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/slot4"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/slot5"
            style="@style/timeSlotChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:checkable="true"
            android:clickable="true"
            android:minWidth="50dp" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>