<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="322dp"
        android:layout_height="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/bookingButton"
        style="@style/mainButtonStyle"
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="#2E2E51"
        android:onClick="createBooking"
        android:text="@string/bookingButton"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/tableManagement"
        style="@style/mainButtonStyle"
        android:layout_width="145dp"
        android:layout_height="0dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#2E2E51"
        android:onClick="createTableManagement"
        android:text="@string/tableManagement"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookingButton" />

    <Button
        android:id="@+id/bookingManagement"
        style="@style/mainButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        android:layout_marginTop="84dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="#2E2E51"

        android:onClick="modifyBooking"
        android:text="@string/bookingManagement"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>